k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-login
  namespace: sample-login
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: sample-login
