k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-login
  namespace: sample-login
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "192.168.56.101.nip.io"  # Updated to match Helm values
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-login
                port:
                  number: 5000
